add: 캐릭터 이동과 샷 구현

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "no-await-in-loop": 0,
       "@typescript-eslint/space-before-function-paren": 0,
       "lines-between-class-members": 0,
+      "no-restricted-syntax": 0,
       "quotes": [
         "error",
         "single"
