--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
       "@typescript-eslint/space-before-function-paren": 0,
       "lines-between-class-members": 0,
       "no-restricted-syntax": 0,
+      "operator-linebreak": 0,
+      "no-param-reassign": 0,
       "quotes": [
         "error",
         "single"
