--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "no-restricted-syntax": 0,
       "operator-linebreak": 0,
       "no-param-reassign": 0,
+      "no-shadow": 0,
       "quotes": [
         "error",
         "single"
