--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "operator-linebreak": 0,
       "no-param-reassign": 0,
       "no-shadow": 0,
+      "import/no-cycle": 0,
       "quotes": [
         "error",
         "single"
@@ -66,6 +67,7 @@
     },
     "env": {
       "node": true,
+      "browser": true,
       "es2020": true
     }
   },
