--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "space-sweeper",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "build": "parcel build src/index.html"
+  },
   "eslintConfig": {
     "parserOptions": {
       "project": "./tsconfig.json"
@@ -79,6 +82,7 @@
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
     "node-sass": "^4.14.0",
+    "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
   }
 }
